# This file is part of the Hercules-Helper project.
#
# (C) Copyright William R. Lewis, 2020-2025

# Changelog:
#
# Updated: 16 JAN 2025
# - Add MAXRATES detection to control extra testing
# - Add entry for Raspberry Pi 5B 16GB
#
# Updated: 09 JAN 2025
# - Updated the README
#
# Updated: 01 JAN 2025
# - Add new --git-branch and --git-commit command line options
#
# Updated: 12 OCT 2024
# - Fix 'dnf list' command for Fedora
#
# Updated: 17 SEP 2024
# - Update config.{guess,sub} to latest from GNU
#
# Updated: 25 AUG 2024
# - Add --accept-root to allow running the script as root user
#
# Updated: 01 AUG 2024
# - Make various info and warnings around 'make check' more readable
# - Limit 'make -j' to 1 if memory size is less than 2000
#
# Updated: 11 JUL 2024
# - Make helper-build-regina.sh aware of Macports
#
# Updated: 09 JUL 2024
# - Add Android detection and allow the script to run (not yet supported)
#
# Updated: 11 JUN 2024
# - Added support for Apple macOS 15 Sequoia (Beta)
#
# Updated: 04 JUN 2024
# - Correct bitness test for FreeBSD 64-bit on Raspberry Pi
#   Thanks to Aike (Asmid2002) for this improvement
# - Correct Regina configure for FreeBSD and 64-bit on Pi
# - Correct Reinga related typos in FreeBSD special config file
#
# Updated: 05 MAY 2024
# - Add support for Amazon Linux (thanks to Gregory Rudolph)
#
# Updated: 25 APR 2024
# - Display "-unknown-" for script version if not from a git repo
# - Fix problem scp-ing to system that auto sets Hercules environment
#   "scp: Ensure the remote shell produces no output for non-interactive ..."
#
# Updated: 24 APR 2024
# - Fix so --detect-only can be used alone
# - Fix so --detect-only can be used alone
#
# Updated: 19 APR 2024
# - Remove backslashed quotes from help output
#
# Updated: 16 APR 2024
# - Allow new OS/Builds via opt_prompts/--prompts [Rudi]
#   When system detection fails, or system is known to not
#   be supported, prompt and allow processing to coninue.
#
# Updated: 16 APR 2024